<resources>
    <string name="app_name">JAV1</string>
    <string name="title_home">Home</string>
    <string name="title_add_book">Ajouter un livre</string>
    <string name="title_notifications">Notifications</string>
    <string name="select_contact">Sélectionner un contact</string>
    <string name="select_date">Sélectionner la Date</string>
    <string name="select_date_hint">Choose a date</string>
    <string name="btn_lend">Prêter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_title">Titre du livre</string>
    <string name="isbn">ISBN</string>
    <string name="add">Ajouter</string>
    <string name="description">Description</string>
    <string name="add_lend">Faire un prêt</string>
</resources>