<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Lend">

    <Button
        android:id="@+id/select_contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_contact" />

    <TextView
        android:id="@+id/contact_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/select_date"
        android:layout_width="345dp"
        android:layout_height="58dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/select_date_hint"
        android:inputType="date" />

    <Button
        android:id="@+id/btn_lend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_lend" />

</LinearLayout>